semantique et interoperabilité

--- a/SemanticInteroperability.html
+++ b/SemanticInteroperability.html
@@ -340,10 +340,11 @@
                                     </div>
                                     <div class="content-zone">
                                         <div class="text-zone">
-                                            <p>Les technologies orientées graphes</p>
+                                            <p>De nombreuses technologies émergentes redistribuant les cartes</p>
                                             <ul style="font-size: 0.4em;">
                                                 <li>Emergence des technologies orientées graphes</li>
-                                                <li>Evolutions centrées sur RDF plus que sur OWL<br>RDF1.2, RDF*, raisonneurs RDF</li>
+                                                <li>Evolutions centrées sur RDF plus que sur OWL<br>RDF1.2, RDF*,
+                                                    raisonneurs RDF</li>
                                                 <li>Nouvelles syntaxes intégrant JSON</li>
                                                 <li>Systèmes informatiques distribués ou sémantique?</li>
                                                 <li>Relance avec IA explicable?</li>
@@ -354,7 +355,7 @@
                                                 style="max-width: 100%; height: auto;" />
                                         </div>
                                     </div>
-                                </section>                                
+                                </section>
                                 <section>
                                     <h3>Structure d’une Ontologie OWL</h3>
                                     <ul>
@@ -382,8 +383,10 @@
                                 <section>
                                     <h3>Définition et Exemples</h3>
                                     <ul>
-                                        <li><b>DOLCE :</b> Concepts cognitifs et linguistiques</li>
-                                        <li><b>BFO :</b> Structure fondamentale des objets et événements</li>
+                                        <li><b><a href="https://arxiv.org/pdf/2308.01597">DOLCE</a>:</b> Descriptive Ontology for Linguistic and Cognitive Engineering<br> Concepts cognitifs et linguistiques</li>
+                                        <li><b><a href="https://basic-formal-ontology.org/">BFO</a>:</b> Basic Formal Ontology<br>Structure fondamentale des objets et événements</li>
+                                        <li><b><a href="https://basic-formal-ontology.org/">UFO</a>:</b> Unified Fundational Ontology<br>Unification d'ontologies de haut niveau incluant BFO</li>
+                                
                                     </ul>
                                 </section>
                                 <section>
@@ -392,6 +395,109 @@
                                         <li>Standardisation</li>
                                         <li>Réutilisabilité</li>
                                         <li>Cohérence</li>
+                                    </ul>
+                                </section>
+                                <section>
+                                    <h3>Apports des Ontologies de Haut Niveau</h3>
+                                    <p>Pourquoi les utiliser ?</p>
+                                </section>
+
+                                <!-- Slide 1: Normalisation et Cohérence -->
+                                <section>
+                                    <h3>Normalisation et Cohérence</h3>
+                                    <ul>
+                                        <li><b>Description universelle :</b> Vocabulaire standardisé.</li>
+                                        <li><b>Réduction des ambiguïtés :</b> Définitions claires.</li>
+                                        <li><b>Interopérabilité :</b> Partage cohérent entre systèmes.</li>
+                                    </ul>
+                                    <p>Exemple : BFO alignant bases biomédicales.</p>
+                                </section>
+
+                                <!-- Slide 2: Intégration multi-domaines -->
+                                <section>
+                                    <div classe="title-zone">
+                                        <h3>Intégration Multi-domaines</h2>
+                                    </div>
+                                    <div class="content-zone">
+                                        <div class="text-zone">
+                                            <ul>
+                                                <li><b>Unification :</b> Pont entre disciplines.</li>
+                                                <li><b>Interopérabilité verticale :</b> Stratégie métier ↔ Technique.
+                                                </li>
+                                            </ul>
+                                            <p>Exemple : BFO ou DOLCE pour disciplines de la biochimie</p>
+                                        </div>
+                                        <div class="image-zone">
+                                            <img src="./img/UpperOntologyBridges.webp" alt="UpperOntologyBridges"
+                                                style="max-width: 100%; height: auto;" />
+                                        </div>
+                                    </div>
+                                </section>
+
+                                <!-- Slide 3: Relations fondamentales -->
+                                <section>
+                                    <h3>Relations Fondamentales</h3>
+                                    <ul>
+                                        <li>Relations comme <b>composition</b>, <b>causalité</b>, ou <b>subsomption</b>.
+                                        </li>
+                                        <li>Hiérarchisation claire des concepts.</li>
+                                    </ul>
+                                    <p>Exemple : DOLCE relie événements et objets.</p>
+                                </section>
+
+                                <!-- Slide 4: Gestion des connaissances -->
+                                <section>
+                                    <h3>Gestion des Connaissances</h3>
+                                    <ul>
+                                        <li><b>Réutilisabilité :</b> Blocs conceptuels adaptables.</li>
+                                        <li><b>Évolutivité :</b> Ajout de nouvelles connaissances.</li>
+                                    </ul>
+                                    <p>Exemple : Basic Formal Ontologie (BF0) dans l'Industrie 4.0 pour nouveaux capteurs.</p>
+                                </section>
+
+                                <!-- Slide 5: Analyse et décision -->
+                                <section>
+                                    <h3>Analyse et Décision</h3>
+                                    <ul>
+                                        <li><b>Formalisation :</b> Raisonnements automatiques via OWL.</li>
+                                        <li><b>Support décisionnel :</b> Traçabilité dans systèmes complexes.</li>
+                                    </ul>
+                                    <p>Exemple : Modélisation des impacts d’un changement.</p>
+                                </section>
+
+                                <!-- Slide 6: Standardisation -->
+                                <section>
+                                    <h3>Standardisation</h3>
+                                    <ul>
+                                        <li><b>Contributions :</b> Standards ISO, W3C.</li>
+                                        <li><b>Industrie 4.0 :</b> Gestion des systèmes numériques.</li>
+                                    </ul>
+                                    <p>Exemple : ISO 15926 pour industries pétrolières.</p>
+                                </section>
+
+                                <!-- Slide 7: Problèmes de compatibilité -->
+                                <section>
+                                    <h3>Problèmes de Compatibilité</h3>
+                                    <ul>
+                                        <li><b>Manque d’unification :</b> Les OHL sont souvent incompatibles entre
+                                            elles.</li>
+                                        <li><b>Conflits de terminologie :</b> Concepts similaires définis différemment
+                                            (ex. "Processus" en DOLCE vs BFO).</li>
+                                        <li><b>Convergence difficile :</b> DOLCE plus orientée philosophique, BFO plus
+                                            pragmatique.</li>
+                                        <li><b>Adoption limitée :</b> Les standards ne couvrent pas tous les besoins
+                                            industriels.</li>
+                                    </ul>
+                                    <p>Exemple : Intégrer des modèles basés sur DOLCE dans un environnement BFO.</p>
+                                </section>
+
+                                <!-- Slide 8: Limites et Critiques -->
+                                <section>
+                                    <h3>Limites et Critiques</h3>
+                                    <ul>
+                                        <li><b>Complexité :</b> Usage difficile pour non-experts.</li>
+                                        <li><b>Compétition :</b> Plusieurs OHL (BFO, DOLCE, SUMO).</li>
+                                        <li><b>Taille :</b> Trop général ou trop rigide.</li>
                                     </ul>
                                 </section>
                             </section>
