semantique et interoperabilité

--- a/SemanticInteroperability.html
+++ b/SemanticInteroperability.html
@@ -377,7 +377,7 @@
                             <!-- Partie 3 : Ontologies de Haut Niveau -->
                             <section>
                                 <section>
-                                    <h2>Ontologies de Haut Niveau</h2>
+                                    <h2><a href="https://cw.fel.cvut.cz/b181/_media/courses/osw/lecture-06upperontologies-s.pdf">Ontologies de Haut Niveau</a></h2>
 
                                 </section>
                                 <section>
