semantique et interoperabilité

--- a/SemanticInteroperability.html
+++ b/SemanticInteroperability.html
@@ -634,9 +634,9 @@
                                             sur le stockage et la gestion des données physiques </li>
                                         <li>Les gestionnaires de la connaissance,
                                             qui se préoccupent de leur interprétation et de leur utilisation.</li>
-                                            <li>Les ontologues qui traite de la sémantique avec des automates</li>
-    
-                                        </ul>
+                                        <li>Les ontologues qui traite de la sémantique avec des automates</li>
+
+                                    </ul>
                                     </p>
                                 </section>
                                 <section>
@@ -744,7 +744,9 @@
                             <!-- Partie 2 : OWL et ontologies -->
                             <section>
                                 <section>
-                                    <h2>OWL pour l’intégration de données</h2>
+                                    <h2> A propos du Langage pour les Ontologies du Web</h2>
+                                    <p  style="font-size: 0.8em;">
+                                        OWL (Ontology Web Language)</p>
                                 </section>
                                 <section>
                                     <h3>Qu’est-ce que OWL ?</h3>
@@ -802,9 +804,9 @@
                                     <h3>Structure d’une Ontologie OWL</h3>
                                     <ul>
                                         <li>Classes : Concepts ou catégories</li>
-                                        <li>Propriétés : Relations ou attributs</li>
-                                        <li>Individus : Instances des classes</li>
-                                        <li>Restrictions : Règles sur les relations</li>
+                                        <li>Propriétés : données ou objets</li>
+                                        <li>Individus : ressources avec une IRI</li>
+                                        <li>Contraintes : Règles sur les relations</li>
                                     </ul>
                                 </section>
                                 <section>
@@ -815,9 +817,7 @@
                                         <li>Inférence automatique</li>
                                     </ul>
                                 </section>
-                            </section>
-                            <!-- Partie 3 : Ontologies de Haut Niveau -->
-                            <section>
+
                                 <section>
                                     <h2><a
                                             href="https://cw.fel.cvut.cz/b181/_media/courses/osw/lecture-06upperontologies-s.pdf">Ontologies
@@ -1027,7 +1027,7 @@
  <!-- Partie 5 -->
  <section>
     <section>
-        <h2>Ontologies et Intéropérabilité</h2>
+        <h2>Construire l'interopérabilité sémantique avec OWL</h2>
     </section>
 
 
