semantique et interoperabilité

--- a/SemanticInteroperability.html
+++ b/SemanticInteroperability.html
@@ -621,7 +621,7 @@
                                             </ul>
                                         </div>
                                         <div class="image-zone">
-                                            <img src="./img/DIKWPracticité.png" alt="DIKWPracticité"
+                                            <img src="./img/DIKWPracticite.png" alt="DIKWPracticite"
                                                 style="max-width: 100%; height: auto;" />
                                         </div>
                                     </div>
